# quickpomdps

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
examples/: lightdark.py  tiger.py
quickpomdps/: .travis.yml  __init__.py  install.jl  setup.jl
quickpomdps/tests/: simple.py  test_simple.py  test_tiger.py
tests/: Manifest.toml  Project.toml  test_quickpomdps.py  test_tiger.py
